--- a/DiscordRich/MainWindow.xaml
+++ b/DiscordRich/MainWindow.xaml
@@ -5,18 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DiscordRich"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
         Title="DiscordRich" Height="433" Width="444" Closing="MainWindow_Closing" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow">
     <Grid HorizontalAlignment="Center" Width="444" Height="417" VerticalAlignment="Top">
         <Button Content="&lt;button onclick=&quot;GoToMyPage()&quot;&gt;crazyne55&lt;/button&gt;" HorizontalAlignment="Center" Margin="0,366,0,0" Width="304" BorderBrush="White" Background="White" Foreground="#FF0027FF" Click="OpenURL" RenderTransformOrigin="0,1" VerticalAlignment="Top"/>
-        <TextBox x:Name="INPUT_Details" Height="30" Margin="0,35,97,0" TextWrapping="Wrap" Text="DiscordRich, The Rich Presense" VerticalAlignment="Top" HorizontalAlignment="Right" Width="250"/>
-        <TextBox x:Name="INPUT_State" Height="30" Margin="97,70,0,0" TextWrapping="Wrap" Text="App Made By crazyne55!" VerticalAlignment="Top" HorizontalAlignment="Left" Width="250"/>
-        <TextBox x:Name="INPUT_LargeImage" Height="30" Margin="0,105,227,0" TextWrapping="Wrap" Text="dr_logo" VerticalAlignment="Top" HorizontalAlignment="Right" Width="120" IsEnabled="False"/>
-        <TextBox x:Name="INPUT_LargeText" Height="30" Margin="227,105,0,0" TextWrapping="Wrap" Text="DiscordRich Logo" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120"/>
-        <TextBox x:Name="INPUT_SmallImage" Height="30" Margin="0,140,227,0" TextWrapping="Wrap" Text="dr_logo" VerticalAlignment="Top" HorizontalAlignment="Right" Width="120" IsEnabled="False"/>
-        <TextBox x:Name="INPUT_SmallText" Height="30" Margin="227,140,0,0" TextWrapping="Wrap" Text="smol logo :)" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120"/>
-        <TextBox x:Name="INPUT_PartyID" Height="30" Margin="97,175,0,0" TextWrapping="Wrap" Text="LobbyID" VerticalAlignment="Top" HorizontalAlignment="Left" Width="250" IsEnabled="False"/>
-        <TextBox x:Name="INPUT_PartyCurrent" Height="30" Margin="0,210,227,0" TextWrapping="Wrap" Text="6" VerticalAlignment="Top" HorizontalAlignment="Right" Width="120"/>
-        <TextBox x:Name="INPUT_PartyMax" Height="30" Margin="227,210,0,0" TextWrapping="Wrap" Text="9" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120"/>
-        <Button x:Name="SUBMIT_DATA" Content="Update" Height="25" Margin="122,251,122,0" VerticalAlignment="Top" Width="200" Click="SUBMIT_DATA_Click"/>
+        <TextBox x:Name="INPUT_Details" Height="30" Margin="0,113,0,0" TextWrapping="Wrap" Text="DiscordRich, The Rich Presense" VerticalAlignment="Top" HorizontalAlignment="Center" Width="250" IsEnabled="False"/>
+        <TextBox x:Name="INPUT_State" Height="30" Margin="0,148,0,0" TextWrapping="Wrap" Text="App Made By crazyne55!" VerticalAlignment="Top" HorizontalAlignment="Center" Width="250" IsEnabled="False"/>
+        <TextBox x:Name="INPUT_LargeImage" Height="30" Margin="0,183,227,0" TextWrapping="Wrap" Text="dr_logo" VerticalAlignment="Top" HorizontalAlignment="Right" Width="120" IsEnabled="False"/>
+        <TextBox x:Name="INPUT_LargeText" Height="30" Margin="227,183,0,0" TextWrapping="Wrap" Text="DiscordRich Logo" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120" IsEnabled="False"/>
+        <TextBox x:Name="INPUT_SmallImage" Height="30" Margin="0,218,227,0" TextWrapping="Wrap" Text="dr_logo" VerticalAlignment="Top" HorizontalAlignment="Right" Width="120" IsEnabled="False"/>
+        <TextBox x:Name="INPUT_SmallText" Height="30" Margin="227,218,0,0" TextWrapping="Wrap" Text="smol logo :)" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120" IsEnabled="False"/>
+        <TextBox x:Name="INPUT_PartyID" Height="30" Margin="0,253,0,0" TextWrapping="Wrap" Text="LobbyID" VerticalAlignment="Top" HorizontalAlignment="Center" Width="250" IsEnabled="False"/>
+        <TextBox x:Name="INPUT_PartyCurrent" Height="30" Margin="0,288,227,0" TextWrapping="Wrap" Text="6" VerticalAlignment="Top" HorizontalAlignment="Right" Width="120" IsEnabled="False"/>
+        <TextBox x:Name="INPUT_PartyMax" Height="30" Margin="227,288,0,0" TextWrapping="Wrap" Text="9" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120" IsEnabled="False"/>
+        <Button x:Name="SUBMIT_DATA" Content="Update" Height="25" Margin="122,329,122,0" VerticalAlignment="Top" Width="200" Click="SUBMIT_DATA_Click" IsEnabled="False"/>
+        <TextBox x:Name="INPUT_AppID"  HorizontalAlignment="Left" Height="30" Margin="97,49,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="215" Foreground="Black" Background="White"/>
+        <Button x:Name="SUBMIT_RUN" Content="Start" HorizontalAlignment="Left" Height="30" Margin="317,49,0,0" VerticalAlignment="Top" Width="30" Click="SUBMIT_RUN_Click"/>
     </Grid>
 </Window>
