--- a/DiscordRich/MainWindow.xaml
+++ b/DiscordRich/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DiscordRich"
         mc:Ignorable="d"
-        ResizeMode="NoResize"
+        ResizeMode="CanMinimize"
         Title="DiscordRich" Height="433" Width="444" Closing="MainWindow_Closing" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow">
     <Grid HorizontalAlignment="Center" Width="444" Height="417" VerticalAlignment="Top">
         <Button ToolTip="My [W.I.P.] website" Content="&lt;button onclick=&quot;GoToMyPage()&quot;&gt;crazyne55&lt;/button&gt;" HorizontalAlignment="Center" Margin="0,366,0,0" Width="304" BorderBrush="White" Background="White" Foreground="#FF0027FF" Click="OpenURL" RenderTransformOrigin="0,1" VerticalAlignment="Top"/>
